pbbam_test_cpp_sources = files([
  'test_Accuracy.cpp',
  'test_AlignmentPrinter.cpp',
  'test_BamFile.cpp',
  'test_BamHeader.cpp',
  'test_BamRecord.cpp',
  'test_BamRecordBuilder.cpp',
  'test_BamRecordClipping.cpp',
  'test_BamRecordImplCore.cpp',
  'test_BamRecordImplTags.cpp',
  'test_BamRecordImplVariableData.cpp',
  'test_BamRecordMapping.cpp',
  'test_BamWriter.cpp',
  'test_BarcodeQuery.cpp',
  'test_Cigar.cpp',
  'test_Compare.cpp',
  'test_DataSetCore.cpp',
  'test_DataSetIO.cpp',
  'test_DataSetQuery.cpp',
  'test_DataSetXsd.cpp',
  'test_EndToEnd.cpp',
  'test_EntireFileQuery.cpp',
  'test_Fasta.cpp',
  'test_Fastq.cpp',
  'test_FileUtils.cpp',
  'test_Frames.cpp',
  'test_GenomicIntervalQuery.cpp',
  'test_IndexedBamWriter.cpp',
  'test_IndexedFastaReader.cpp',
  'test_Intervals.cpp',
  'test_LongCigar.cpp',
  'test_PacBioIndex.cpp',
  'test_PbiFilter.cpp',
  'test_PbiFilterQuery.cpp',
  'test_QNameQuery.cpp',
  'test_QualityValues.cpp',
  'test_Pulse2BaseCache.cpp',
  'test_ReadAccuracyQuery.cpp',
  'test_ReadGroupInfo.cpp',
  'test_SamWriter.cpp',
  'test_SequenceUtils.cpp',
  'test_StringUtils.cpp',
  'test_SubreadLengthQuery.cpp',
  'test_Tags.cpp',
  'test_TimeUtils.cpp',
  'test_Validator.cpp',
  'test_VcfFile.cpp',
  'test_VcfFormat.cpp',
  'test_VcfHeader.cpp',
  'test_VcfReader.cpp',
  'test_VcfSort.cpp',
  'test_VcfQuery.cpp',
  'test_VcfVariant.cpp',
  'test_VcfWriter.cpp',
  'test_Version.cpp',
  'test_WhitelistedZmwReadStitcher.cpp',
  'test_ZmwReadStitcher.cpp',
  'test_ZmwQuery.cpp'])

# cram files
pbbam_cram_bam2sam_t_in = files('cram/bam2sam.t.in')
pbbam_cram_pbindexdump_json_t_in = files('cram/pbindexdump_json.t.in')
pbbam_cram_pbindexdump_cpp_t_in = files('cram/pbindexdump_cpp.t.in')
pbbam_cram_pbmerge_pacbio_ordering_t_in = files('cram/pbmerge_pacbio_ordering.t.in')
pbbam_cram_pbmerge_aligned_ordering_t_in = files('cram/pbmerge_aligned_ordering.t.in')
pbbam_cram_pbmerge_mixed_ordering_t_in = files('cram/pbmerge_mixed_ordering.t.in')
pbbam_cram_pbmerge_dataset_t_in = files('cram/pbmerge_dataset.t.in')
pbbam_cram_pbmerge_fofn_t_in = files('cram/pbmerge_fofn.t.in')
pbbam_cram_pbbamify_t_in = files('cram/pbbamify.t.in')
