pbbam_test_cpp_sources = files([
  'test_AlignmentPrinter.cpp',
  'test_BamFile.cpp',
  'test_BamHeader.cpp',
  'test_BamRecord.cpp',
  'test_BamRecordClipping.cpp',
  'test_BamRecordImplCore.cpp',
  'test_BamRecordImplTags.cpp',
  'test_BamRecordImplVariableData.cpp',
  'test_BamRecordMapping.cpp',
  'test_BamWriter.cpp',
  'test_BedReader.cpp',
  'test_BedWriter.cpp',
  'test_BgzipFastaWriter.cpp',
  'test_BgzipFastqWriter.cpp',
  'test_BgzipWriter.cpp',
  'test_CCSPbiBuilder.cpp',
  'test_CCSRecordIO.cpp',
  'test_CollectionMetadata.cpp',
  'test_Compare.cpp',
  'test_CompositeBamReaders.cpp',
  'test_DataSetCore.cpp',
  'test_DataSetIO.cpp',
  'test_DataSetQuery.cpp',
  'test_DataSetXsd.cpp',
  'test_EndToEnd.cpp',
  'test_EntireFileQuery.cpp',
  'test_FaiIndex.cpp',
  'test_FaiZmwChunker.cpp',
  'test_FastaReader.cpp',
  'test_FastaSequence.cpp',
  'test_FastaSequenceQuery.cpp',
  'test_FastaWriter.cpp',
  'test_FastqReader.cpp',
  'test_FastqSequence.cpp',
  'test_FastqWriter.cpp',
  'test_FileUtils.cpp',
  'test_GenomicIntervalQuery.cpp',
  'test_GenomicIntervals.cpp',
  'test_IndexedBamWriter.cpp',
  'test_IndexedFastaReader.cpp',
  'test_IndexedFastqReader.cpp',
  'test_LongCigar.cpp',
  'test_PacBioIndex.cpp',
  'test_PbiFilter.cpp',
  'test_PbiFilterQuery.cpp',
  'test_QualityValues.cpp',
  'test_Pulse2BaseCache.cpp',
  'test_ReadGroupInfo.cpp',
  'test_RunMetadata.cpp',
  'test_SamIO.cpp',
  'test_SequenceUtils.cpp',
  'test_StringUtils.cpp',
  'test_Tags.cpp',
  'test_TextFileReader.cpp',
  'test_TextFileWriter.cpp',
  'test_TimeUtils.cpp',
  'test_Validator.cpp',
  'test_VcfFile.cpp',
  'test_VcfFormat.cpp',
  'test_VcfHeader.cpp',
  'test_VcfReader.cpp',
  'test_VcfSort.cpp',
  'test_VcfQuery.cpp',
  'test_VcfVariant.cpp',
  'test_VcfWriter.cpp',
  'test_Version.cpp',
  'test_WhitelistedZmwReadStitcher.cpp',
  'test_ZmwChunkedFastxReader.cpp',
  'test_ZmwReadStitcher.cpp',
  'test_ZmwQuery.cpp'])

# cram files
pbbam_cram_bam2sam_t_in = files('cram/bam2sam.t.in')
pbbam_cram_pbindexdump_json_t_in = files('cram/pbindexdump_json.t.in')
pbbam_cram_pbindexdump_cpp_t_in = files('cram/pbindexdump_cpp.t.in')
pbbam_cram_pbmerge_pacbio_ordering_t_in = files('cram/pbmerge_pacbio_ordering.t.in')
pbbam_cram_pbmerge_aligned_ordering_t_in = files('cram/pbmerge_aligned_ordering.t.in')
pbbam_cram_pbmerge_mixed_ordering_t_in = files('cram/pbmerge_mixed_ordering.t.in')
pbbam_cram_pbmerge_dataset_t_in = files('cram/pbmerge_dataset.t.in')
pbbam_cram_pbmerge_fofn_t_in = files('cram/pbmerge_fofn.t.in')
pbbam_cram_pbbamify_t_in = files('cram/pbbamify.t.in')
